<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">The SSN App</string>
    <string name="temp">Karnix</string>

    <string name="sign_in_email_error">Please sign in with your SSN mail id!</string>

    <string name="drawer_home">Home</string>
    <string name="drawer_alma">Alma Connect</string>
    <string name="drawer_buses">Bus Routes</string>
    <string name="drawer_dining">Dining</string>
    <string name="drawer_exam_cell">Exam Cell</string>
    <string name="drawer_bus_announcements">Bus Alerts</string>
    <string name="drawer_message">Post Message</string>
    <string name="drawer_about">App Info</string>
    <string name="drawer_report_issue">Report Issue</string>
    <string name="drawer_settings">Notification Settings</string>
    <string name="drawer_sign_out">Sign Out</string>

    <string name="action_feed">News Feed</string>

    <string-array name="dining_options">
        <item>Ladies Mess</item>
        <item>PG Gents Mess</item>
        <item>Stores/Canteen</item>
        <item>Snow Cube</item>
        <item>Tutti Frutti</item>
        <item>UG Gents Mess</item>
    </string-array>

    <string-array name="dining_mess_categories">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>

    <string name="application_id">FT5LiYFPZTttR7NKcp6EFYo6E5ht9HnuhimWlT84</string>
    <string name="client_key">aWVS52GVM6RFAzuC1sr51BnByMq0J9mA5ZVV1Coe</string>

    <string name="description">SSN Notice Boards - now in your pocket.</string>

    <string name="shout_outs">Shout outs to Seshadhri for the bus routes database, Krishna G and Ashok for the seating arrangements section, Arun Prakash sir and Adarshana Rajagopal!</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, his consul verear torquatos ne. Magna graecis eam no. Mel eu inani ludus, pro bonorum habemus no, ius copiosae convenire te. Usu at illud probatus, no pri fabulas pertinax. In putent voluptaria ius, vix augue noluisse verterem an. Cum inani persius theophrastus at, vel ad tempor cotidieque.</string>

    <string-array name="admin_category_keys">
        <item>admin</item>
        <item>busdept</item>
    </string-array>

    <string-array name="department_category_keys">
        <item>biomed</item>
        <item>chem</item>
        <item>civil</item>
        <item>cse</item>
        <item>ece</item>
        <item>eee</item>
        <item>human</item>
        <item>it</item>
        <item>mech</item>
        <item>sace</item>
        <item>som</item>
    </string-array>
    <string-array name="department_categories">
        <item>Bio-Medical Engineering</item>
        <item>Chemical Engineering</item>
        <item>Civil Engineering</item>
        <item>Computer Science and Engineering</item>
        <item>Electronics and Communication Engineering</item>
        <item>Electrical and Electronics Engineering</item>
        <item>Humanities and Sciences Department</item>
        <item>Information Technology</item>
        <item>Mechanical Engineering</item>
        <item>School of Advanced Career Education</item>
        <item>School of Management</item>
    </string-array>

    <string name="settings_notifications">Notifications</string>
    <string name="settings_notifications_admin">Admin</string>
    <string name="settings_notifications_clubs">Clubs</string>
    <string name="settings_notifications_department">Departments</string>
    <string name="settings_notifications_exam_cell">Exam Cell</string>
    <string name="settings_notifications_bus">Bus</string>
    <string name="settings_notifications_feed">News Feed</string>

    <string-array name="notification_category_keys">
        <item>admin</item>
        <item>clubs</item>
        <item>departments</item>
        <item>examcell</item>
        <item>busdept</item>
        <item>user_posts</item>
    </string-array>

    <string name="connection_failed">Connection Failed</string>
    <string name="alerts_retry">Retry</string>

    <string name="slide1_title">Welcome to the SSN App!</string>
    <string name="slide2_title">Home Screen</string>
    <string name="slide3_title">Exam Cell Section</string>
    <string name="slide4_title">Dining Section</string>
    <string name="slide5_title">Bus Section</string>
    <string name="slide6_title">Social Feed</string>
    <string name="slide7_title">Prompt Notifications</string>

    <string name="slide1_description">Keeping yourself up to date with all things SSN is now easier than ever.</string>
    <string name="slide2_description">Three tabs - Admin, Clubs and Department - All the important information, right in the front.</string>
    <string name="slide3_description">Everything AU. Including your seating arrangements.</string>
    <string name="slide4_description">To help you make wiser decisions when you are hungry.</string>
    <string name="slide5_description">Keep track of all the last minute bus route changes.</string>
    <string name="slide6_description">A social feed for everyone to share.</string>
    <string name="slide7_description">So that you don\'t miss out on the news.</string>

    <string name="popup_notification_message">All notifications are enabled by default. You can change them in the notification settings.</string>

    <string name="about_libraries">About Libraries</string>
</resources>
