<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backColor"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:id="@+id/cardview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:elevation="50dp"
            card_view:cardBackgroundColor="@android:color/white"
            card_view:cardCornerRadius="8dp">


            <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="Developer"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="24sp"
                        android:textStyle="italic" />

                    <View
                        android:layout_width="105dp"
                        android:layout_height="1dp"
                        android:background="@color/primaryColor" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Karnik Ram"
                            android:textColor="@color/primaryTextColor"
                            android:textSize="24sp"
                            android:textStyle="italic" />

                        <ImageView
                            android:id="@+id/fb1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:src="@drawable/fb" />


                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </RelativeLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="Vectors"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="24sp"
                        android:textStyle="italic" />


                    <View
                        android:layout_width="80dp"
                        android:layout_height="1dp"
                        android:background="@color/primaryColor" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Krishna"
                            android:textColor="@color/primaryTextColor"
                            android:textSize="24sp"
                            android:textStyle="italic" />

                        <ImageView
                            android:id="@+id/fb2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:src="@drawable/fb" />

                    </RelativeLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:text="@string/shout_outs"
                        android:textColor="@color/secondaryTextColor"
                        android:textSize="16sp"
                        android:textStyle="italic" />


                    <TextView
                        android:id="@+id/about_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="32dp"
                        android:text="@string/app_name"
                        android:textColor="@color/primaryColor"
                        android:textSize="32sp"
                        android:textStyle="italic" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="VersionName"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/smudge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="-Smudge-"
                        android:textColor="@color/secondaryTextColor"
                        android:textSize="14sp"
                        android:textStyle="italic" />


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        android:src="@drawable/ic_launcher" />

                    <TextView
                        android:id="@+id/fb3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        android:text="fb.com/ssnmachan"
                        android:textColor="@color/primaryColor" />

                    <TextView
                        android:id="@+id/about_3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/description"
                        android:textSize="16sp"
                        android:textStyle="italic" />


                </LinearLayout>
            </ScrollView>
        </android.support.v7.widget.CardView>
    </FrameLayout>
</LinearLayout>
